Add Avicus navigation links

--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -67,6 +67,7 @@
                                 <li><a href="/maps/overcast">Overcast Collection</a></li>
                                 <li><a href="/maps/pgm">PGM Collection</a></li>
                                 <li><a href="/maps/stratus">Stratus Collection</a></li>
+                                <li><a href="/maps/avicus">Avicus Collection</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
@@ -91,6 +92,8 @@
                                 <li><a href="/stats/overcast/bow">Bow Records</a></li>
                                 <li><a href="/stats/overcast/miscellaneous">Miscellaneous</a></li>
                                 <li><a href="/stats/overcast/objective">Objective Leaderboards</a></li>
+                                <li><p class="navbar-menu-title">Avicus</p></li>
+                                <li><a href="/stats/avicus/miscellaneous">Miscellaneous</a></li>  
                             </ul>
                         </li>
                         <li class="active"><a href="/addon-project/wiki"><i class="fa fa-globe"></i> Wiki</a></li>
