--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -25,10 +25,9 @@
         <!-- Page script files -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/10.3.5/lazyload.min.js"></script>
-        <script src="https://mcresourcepile.github.io/assets/js/bootstrap.min.js"></script>
-        <script src="https://mcresourcepile.github.io/assets/js/js.cookie.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://mcresourcepile.github.io/assets/js/user.js"></script>
         <script src="https://mcresourcepile.github.io/assets/js/preferences.js"></script>
-        <script src="https://mcresourcepile.github.io/assets/js/moment.js"></script>
         <script src="/addon-project/assets/js/github.commits.widget.js"></script>
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
